# bap

./: .gitignore  AUTHORS  BRANCH  INSTALL  Makefile.am  Makefile.in  NEWS  README  STYLE.ocaml  TODO  autogen.sh  configure  configure.ac  merge.org
VEX/: BAP.README  Makefile  VEX-ARM-aij-20080725.diff
VEX/pub/: libvex_emwarn.h  libvex_guest_arm.h
autom4te.cache/: output.1  requests  traces.0  traces.1
batteries/: Makefile
batteries-1.4.0/: Makefile
bigint-3.12/otherlibs/: Makefile  Makefile.shared
doc/: Makefile  chap-examples.tex  djb.sty  main.tex
doc/bibtex/: biblio.bib
doc/chap-developer/: overview.tex
doc/chap-examples/: Makefile  basic.il  basic_mod.il  conceval.tex  functions.tex  il.tex  test.il  traces.tex
doc/chap-formalism/: language.tex  operational-semantics-table.tex  operational-semantics.tex  syntax-table.tex
doc/chap-intro/: intro.tex  overview.tex
doc/chap-tools/: discussion.tex  iltrans.tex  obtaining.tex  other-utils.tex  toil.tex
doc/fig/: add-shl.dot
libasmir/: Makefile.am  Makefile.in  config.h.in
libasmir/apps/: Makefile.am  ir_printer.cpp  ir_printer.h  lifttrace.cpp  print-ir.cpp
libasmir/include/: asm_program.h  disasm.h  irtoir-internal.h  irtoir.h  stmt.h  translate.h
libasmir/src/: Makefile.am  Makefile.in  asm_program.c  asm_program.cpp  irtoir-arm.cpp  irtoir-i386.cpp  irtoir.cpp  irtoir_c.cpp  llvm.cpp  ocaml_helpers.c  symbols.c  vexir.c  vexmem.c
libasmir/src/old_ir/: exp.cpp  stmt_c.cpp
libasmir/src/traces/: Makefile.am  pin_common.h  pin_frame.cpp  pin_frame.h  pin_syscalls.h  pin_taint.cpp  pin_taint.h  pin_trace.cpp  pin_trace.h  readtrace.cpp  readtrace.h  reg_mapping.cpp  reg_mapping.h  reg_mapping_pin.cpp  reg_mapping_pin.h  trace.cpp  trace.h  trace_vXX.h  winsyscalls.cpp  winsyscalls.h
libtrace/: Makefile.am  autogen.sh
libtrace/piqi-files/: exceptionframe.piqi  frame.piqi  stdframe.piqi  taintintroframe.piqi  types.piqi
libtrace/src/: Makefile.am
libtrace/src/cpp/: Makefile.am  trace.container.cpp  trace.container.hpp
libtrace/src/cpp/pb/: exceptionframe.piqi.pb.cc  frame.piqi.pb.cc  frame.piqi.pb.h  syscallframe.piqi.pb.cc  types.piqi.pb.cc
libtrace/src/cpp/utils/: Makefile.am
libtracewrap/: Makefile.in
libtracewrap/libtrace/: Makefile.in  autogen.sh  configure  configure.ac
libtracewrap/libtrace/src/cpp/: Makefile.am  Makefile.in  Makefile.windows  trace.container.cpp  trace.container.hpp
libtracewrap/libtrace/src/cpp/pb/: frame.piqi.pb.cc  frame.piqi.pb.h
libtracewrap/libtrace/src/cpp/utils/: Makefile.am  Makefile.in  copytrace.cpp
m4/: ac_ocaml.m4
objsize-0.16/: Makefile
ocaml/: Makefile  Makefile.in  OCamlMakefile  arch.ml  arch.mli  arithmetic.ml  asmir.ml  asmir.mli  asmir_disasm.ml  asmir_disasm.mli  asmir_rdisasm.ml  asmir_rdisasm.mli  asmir_vars.ml  ast.ml  ast_cond_simplify.ml  ast_cond_simplify.mli  ast_convenience.ml  ast_slice.ml  ast_visitor.ml  ast_visitor.mli  big_int_convenience.ml  cdg.ml  cfg.ml  cfg.mli  cfgDataFlow.ml  cfgDataFlow.mli  cfgDataflow.ml  cfgDataflow.mli  cfg_ast.ml  cfg_ast.mli  cfg_pp.ml  cfg_ssa.ml  cfg_ssa.mli  checks.ml  checks.mli  coalesce.ml  coalesce.mli  copy_prop.ml  copy_prop.mli  deadcode.ml  (+121 more)
ocaml-proj.example/: Makefile  README  deployproj.sh
ocaml/piqi/: ast_piqi.ml  stmt_piqi.ml  stmt_piqi_ext.ml
ocamlgraph/: .depend  configure
ocamlgraph-1.8/: .depend
ocamlgraph-1.8/src/: dot_parser.ml  gml.ml  version.ml
ocamlgraph/autom4te.cache/: output.0  requests  traces.0
ocamlgraph/src/: dot_lexer.ml  gml.ml  version.ml
pcre-ocaml-release-6.2.2/: Makefile
pcre-ocaml-release-6.2.2/lib/: Makefile
pintraces/: Makefile  Makefile.in  ctxtest.cpp  gentrace.cpp  getpin.sh  listregs.cpp  makefile.rules  newreadtrace.cpp  pin_misc.cpp  pin_misc.h  pin_syscalls.h  pin_taint.cpp  pin_taint.h  pivot.cpp  pivot.h  readtrace.cpp  reg_mapping_pin.cpp
pintraces/piqi-files/: Makefile  exceptionframe.piqi  exceptionframe.piqi.proto  frame.piqi  stdframe.piqi  stdframe.piqi.proto  stdframe_piqi.ml  stdframe_piqi_ext.ml  syscallframe.piqi  syscallframe.piqi.proto  taintintroframe.piqi  taintintroframe.piqi.proto  taintintroframe_piqi.ml  taintintroframe_piqi_ext.ml  types.piqi  types_piqi_ext.ml
pintraces/trace-format/: stdframe.piqi.pb.cc  stdframe.piqi.pb.h  trace.container.cpp  trace.container.h  trace.container.hpp  types.piqi.pb.h
piqi-files/: Makefile  exp.piqi  stmt.piqi  type.piqi
piqi-files/protobuf/: StmtPiqi.java  stmt.piqi.pb.cc  stmt.piqi.pb.h
protobuf/: Makefile.in
protobuf/gtest/: Makefile.in  aclocal.m4
solvers/: Makefile  README  solver.ml  test.ml
stpwrap/: Makefile
svn-hooks/: post-commit  verify_commit.pl
test/: 8a.S  a8.S  dec16.S  dec32.S  test.c
tests/: Makefile  Makefile.in  TODO_static_bins  analyze_test_log.ml  arithmetic_suite.ml  asmir_suite.ml  ast_suite.ml  bap_suite.ml  big_int_suite.ml  disasm_i386_suite.ml  djgraph_suite.ml  dominator_suite.ml  eval_suite.ml  havlak_suite.ml  hello  hello.il  il_suite.ml  inject_halt.pl  large_binary_consistency_suite.ml  lnf_test.ml  opts_suite.ml  pin_suite.ml  predicate_suite.ml  reduced_havlak_suite.ml  sqrt  sqrt.il  sreedhar_suite.ml  steensgard_suite.ml  testCommon.ml  traces_suite.ml  unroll_suite.ml  var_suite.ml  vsa_suite.ml
tests-proj.example/: Makefile  project_suite.ml
tests/C/: Makefile  Makefile.defs  Makefile.in  recover-hard.c  test.c
tests/asm/: Makefile
tests/static_args/: base64.args  basename.args  chcon.args  (+31 more)
trace/: Makefile  TODO.txt  cache.h  frame.cpp  frame.h  gentrace.cpp  pin_frame.cpp  pin_frame.h  pin_trace.cpp  reader.py  readtrace.cpp  trace.cpp  trace.h  trace_app.cpp
trace-old/: Makefile  NOTES.txt  gentrace.cpp  gentrace.orig.cpp
utils/: Makefile  Makefile.in  backtaint.ml  bisect.bash  codegen.ml  formula.ml  get_functions.ml  ileval.ml  iltrans.ml  insert_halt.ml  rdisasm.ml  resolvetest.ml  solvepredicate.ml  split_disjunction.ml  streamtrans.ml  toil.ml  topredicate.ml
utils-proj.example/: Makefile  README
vagrant/: Vagrantfile  bootstrap.sh
zarith/: project.mak
zarith-1.0/: Makefile
(+89 files in other folders)
